# jpl.labcas.validation

./: .pre-commit-config.yaml  .secrets.baseline  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: secrets-detection.yaml
src/jpl/labcas/validation/: __init__.py  _argparse.py  _classes.py  _functions.py  const.py  errors.py  main.py  splitter.py  summary.py
src/jpl/labcas/validation/phi_pii_recognizers/: __init__.py  _experimental.py  _simple_scoring.py
src/jpl/labcas/validation/validators/: __init__.py  _base.py  _core.py  _experimental.py  _mr.py
